2021-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Add CI via run.sh from r-ci
	* README.md: Add CI badge

2021-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.2

2021-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Additional badgeds and CRAN installation notes

	* configure: On SunOS, create src/Makevars to define endianness so
	that no attemp to include the (non-existing) endian.h is made

2021-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.1

	* inst/NEWS.Rd: Added
	* README.md: Add installation instructions

2021-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/hasher.cpp: Vectorised, added help page
	* man/farmhash.Rd: Added via roxygen2
	* README.md: Added simple README
	* inst/AUTHORS: Geoff Pike wrote FarmHash
	* .gitignore: Added
	* .Rbuildignore: Added
	* cleanup: Added

2021-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial version
	* NAMESPACE: Idem
	* src/farmhash.{cc,h}: From FarmHash
	* src/hasher.cpp: Simpler string hasher
        * .editorconfig: Added